    [package]
name = "apple2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

log_memory = []
log_to_file = []
log_disk = []
log_prodos = []
minifb = []

[dependencies]
cpu = { path = "../cpu" }

eframe = "0.27.2"

float_eq = "1.0.1"
clap = {  version = "4.4.6", features = ["derive"] }
crossbeam = "0.8.2"
log = "0.4.20"
log4rs = "1.2.0"
once_cell = { version = "1.18.0", features = [] }
lazy_static = "1.4.0"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
rand = "0.8.5"
rfd = "0.14.1"
ignore = "0.4.22"
itertools = "0.13.0"
minifb = "0.27.0"
rayon = { version = "1.8.1", features = [] }
dirs = "5.0.1"
config = "0.14.0"
serde = "1.0.196"
serde_json = "1.0.107"
dyn-clone = "1.0.17"

iced = {  git = "https://github.com/iced-rs/iced.git", features = [ "canvas", "tokio" ] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw.git", features = ["tabs"], branch = "Beta" }

tokio = {  version = "1.38.0" }