[package]
name = "cpu"
version = "0.1.0"
authors = ["Cedric Beust <cbeust@gmail.com>"]
edition = "2021"

[dependencies]
#serde = { version = "1.0.131", features = ["derive"] }
#serde_json = "1.0.73"
regex = "1.5.4"
once_cell = "1.19.0"
lazy_static = "1.4.0"
crossbeam = "0.8.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }

