[package]
name = "harte"
version = "0.1.0"
authors = ["Cedric Beust <cbeust@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.107"
lazy_static = "1.4.0"

cpu = { path = "../cpu" }
rayon = "1.8.0"
ratatui = "0.23.0" # { path = "../../ratatui" }
anyhow = "1.0.75"
crossterm = "0.27"
log4rs = "1.2.0"
log = "0.4.18"
clap = "4.4.18"
clap_derive = "4.4.7"
